--- a/SMSManager.UI/SMSManager.UI.csproj
+++ b/SMSManager.UI/SMSManager.UI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SMSManager.Logica\SMSManager.Logica.csproj" />
     <ProjectReference Include="..\SMSManager.Objetos\SMSManager.Objetos.csproj" />
     <ProjectReference Include="..\SMSManager.Utilidades\SMSManager.Utilidades.csproj" />
